--- a/fluentd/base/fluentd.properties.yaml.template
+++ b/fluentd/base/fluentd.properties.yaml.template
@@ -34,6 +34,10 @@ spec:
             value: "${ELASTIC_SEARCH_INDEX}"
           - name:  FLUENTD_SYSTEMD_CONF
             value: 'disable'
+          - name: K8S_NODE_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: spec.nodeName
         resources:
           limits:
             memory: 200Mi
