EA-3137: Update fluentd config
- change output to ES
- add @timestamp in logging for ES indexing

--- a/fluentd/base/conf/sources.conf
+++ b/fluentd/base/conf/sources.conf
@@ -7,8 +7,11 @@
       pos_file /var/log/fluentd-containers.log.pos
       # exclude_path ["/var/log/containers/fluent*", "/var/log/containers/*_kube-system_*.log"]
       <parse>
-        @type kubernetes
         @type json
         time_format %Y-%m-%dT%H:%M:%S.%NZ
+        time_type string
+        localtime false
+        time_key time
+        keep_time_key true
       </parse>
     </source>
