EA-3137: Setting up fluentd (#1)

--- a/fluentd/base/conf/sources.conf
+++ b/fluentd/base/conf/sources.conf
@@ -2,9 +2,10 @@
       @type tail
       read_from_head true
       tag kubernetes.*
-      path /var/log/containers/*.log
+      # start with just search-api logs
+      path /var/log/containers/search-api*.log
       pos_file /var/log/fluentd-containers.log.pos
-      exclude_path ["/var/log/containers/fluent*", "/var/log/containers/*_kube-system_*.log"]
+      # exclude_path ["/var/log/containers/fluent*", "/var/log/containers/*_kube-system_*.log"]
       <parse>
         @type json
         time_format %Y-%m-%dT%H:%M:%S.%NZ
