source config for nginx added

--- a/fluentd/base/conf/sources.conf
+++ b/fluentd/base/conf/sources.conf
@@ -1,17 +1,36 @@
 <source>
-      @type tail
-      read_from_head true
-      tag kubernetes.*
-      # start with just search-api logs
-      path /var/log/containers/search-api*.log
-      pos_file /var/log/fluentd-containers.log.pos
-      # exclude_path ["/var/log/containers/fluent*", "/var/log/containers/*_kube-system_*.log"]
-      <parse>
+    @type tail
+    read_from_head true
+    tag kubernetes.*
+    # start with just search-api logs
+    path /var/log/containers/search-api*.log
+    pos_file /var/log/fluentd-containers.log.pos
+    # exclude_path ["/var/log/containers/fluent*", "/var/log/containers/*_kube-system_*.log"]
+    <parse>
         @type json
         time_format %Y-%m-%dT%H:%M:%S.%NZ
         time_type string
         localtime false
         time_key time
         keep_time_key true
-      </parse>
-    </source>
+    </parse>
+</source>
+
+<source>
+    @type tail
+    read_from_head true
+    tag kubernetes.*
+    path /var/log/*_kube-system_nginx-ingress*.log
+    pos_file /var/log/fluentd-containers.log.pos
+#       <parse>
+#           @type json_in_json
+#           time_format %Y-%m-%dT%H:%M:%S.%NZ
+#       </parse>
+    <parse>
+        @type regexp
+        expression /"host"\s*:\s*"search-api-"/
+        time_key logtime
+        time_format %Y-%m-%d %H:%M:%S %z
+        types id:integer
+    </parse>
+</source>
