--- a/fluentd/base/conf/sources.conf
+++ b/fluentd/base/conf/sources.conf
@@ -28,7 +28,8 @@
 #       </parse>
     <parse>
         @type regexp
-        expression /"host"\s*:\s*"search-api-"/
+        expression /^(?<logtime>[^\]]*) "host"\s*:\s*"search-api-"/
+#         expression /^(?<logtime>[^\]]*) "host"\s*:\s*"search-api-"/
         time_key logtime
         time_format %Y-%m-%d %H:%M:%S %z
         types id:integer
