source config for nginx added

--- a/fluentd/base/conf/outputs.conf
+++ b/fluentd/base/conf/outputs.conf
@@ -1,13 +1,13 @@
-<match **>
-    @type elasticsearch
-    # format host1:port1,host2:port2,host3:port3
-    hosts "#{ENV['EANA_ELASTICSEARCH_HOSTS']}"
-    index_name "#{ENV['EANA_ELASTICSEARCH_INDEX'] || 'fluentd-k8s'}"
-    type_name fluentd
-</match>
-
-# IK: For debugging only. Writes output to a file on fluentd daemonset pods
 # <match **>
-#     @type file
-#     path /tmp/fluentd.log
+#     @type elasticsearch
+#     # format host1:port1,host2:port2,host3:port3
+#     hosts "#{ENV['EANA_ELASTICSEARCH_HOSTS']}"
+#     index_name "#{ENV['EANA_ELASTICSEARCH_INDEX'] || 'fluentd-k8s'}"
+#     type_name fluentd
 # </match>
+
+IK: For debugging only. Writes output to a file on fluentd daemonset pods
+<match **>
+    @type file
+    path /tmp/fluentd.log
+</match>
