--- a/fluentd/base/conf/sources.conf
+++ b/fluentd/base/conf/sources.conf
@@ -31,7 +31,7 @@
         expression /^(?<logtime>[^\]]*) "host"\s*:\s*"search-api-"/
 #         expression /^(?<logtime>[^\]]*) "host"\s*:\s*"search-api-"/
         time_key logtime
-        time_format %Y-%m-%d %H:%M:%S %z
+        time_format %Y-%m-%dT%H:%M:%S.%NZ
         types id:integer
     </parse>
 </source>
