test another regexp filter

--- a/fluentd/base/conf/sources.conf
+++ b/fluentd/base/conf/sources.conf
@@ -28,7 +28,9 @@
 #       </parse>
     <parse>
         @type regexp
-        expression /^(?<logtime>[^\]]*) "host"\s*:\s*"search-api-"/
+        expression /^(?<logtime>.+) (?<stream>stdout|stderr) (?<log1>.*) (?<app>"host"\s*:\s*"search-api-".*) (?<log2>.*)$/
+#         expression /^(?<date>[^ ][^~][^abc]*)\s\[(?<threadcollection>[a-z\0-9;:,.]*)\]\s(?<log_level>\w+)\s(?<class_name>[^|]+)\|+\s(?<app_name>[^~]*)\~(?<app_operation>\w+)\~(?<http_operation>\w+)\~(?<transaction_id>[0-9a-z]+)\~(?<message_id>[0-9a-zA-Z]+)\~(?<business_keys>[^~]*)\~(?<log_message>[a-zA-Z\s:;,."']+)\|+/
+#         expression /^(?<logtime>[^\]]*) "host"\s*:\s*"search-api-"/
 #         expression /^(?<logtime>[^\]]*) "host"\s*:\s*"search-api-"/
         time_key logtime
         time_format %Y-%m-%dT%H:%M:%S.%NZ
