--- a/fluentd/base/conf/sources.conf
+++ b/fluentd/base/conf/sources.conf
@@ -20,7 +20,8 @@
     @type tail
     read_from_head true
     tag kubernetes.*
-    path /var/log/*_kube-system_nginx-ingress*.log
+#     path /var/log/*_kube-system_nginx-ingress*.log
+    path /var/log/containers/*_kube-system_nginx-ingress*.log
     pos_file /var/log/wah-wah-rabbits.log.pos
 #       <parse>
 #           @type json_in_json
@@ -28,7 +29,8 @@
 #       </parse>
     <parse>
         @type regexp
-        expression /^(?<logtime>.+) (?<stream>stdout|stderr) (?<log1>.*) (?<app>"host"\s*:\s*"search-api-".*) (?<log2>.*)$/
+#         expression /^(?<logtime>.+) (?<stream>stdout|stderr) (?<log1>.*) (?<app>"host"\s*:\s*"search-api-".*) (?<log2>.*)$/
+        expression /^(?<logtime>.+) (?<stream>stdout|stderr) (?<some-letter>.).+"client": "(?<client>(\d{1,3}\.){3}\d{1,3})", "host": "(?<host>.+?\..{2,12})", "scheme": "(?<scheme>https?)", "request_method": "(?<request_method>[A-Z]{3,6})", "request_uri": "(?<request_uri>.+)", "request_id": "(?<request_id>[a-f0-9]+)", "status": (?<status>\d{3,3}), "upstream_addr": "(?<upstream_addr>(\d{1,3}\.){3}\d{1,3}(:\d{2,5})?)", "upstream_status": (?<upstream_status>\d{3,3}), "request_time": (?<request_time>\d+\.\d+), "upstream_response_time": (?<upstream_response_time>\d+\.\d+), "upstream_connect_time": (?<upstream_connect_time>\d+\.\d+), "upstream_header_time": (?<upstream_header_time>\d+\.\d+)}/
 #         expression /^(?<date>[^ ][^~][^abc]*)\s\[(?<threadcollection>[a-z\0-9;:,.]*)\]\s(?<log_level>\w+)\s(?<class_name>[^|]+)\|+\s(?<app_name>[^~]*)\~(?<app_operation>\w+)\~(?<http_operation>\w+)\~(?<transaction_id>[0-9a-z]+)\~(?<message_id>[0-9a-zA-Z]+)\~(?<business_keys>[^~]*)\~(?<log_message>[a-zA-Z\s:;,."']+)\|+/
 #         expression /^(?<logtime>[^\]]*) "host"\s*:\s*"search-api-"/
 #         expression /^(?<logtime>[^\]]*) "host"\s*:\s*"search-api-"/
