--- a/fluentd/base/conf/filters.conf
+++ b/fluentd/base/conf/filters.conf
@@ -1,23 +1,24 @@
-<filter Ingress>
-    @type geoip
-    geoip_lookup_keys  host
-    backend_library geoip2_c
-
-    # Set adding field with placeholder (more than one settings are required.)
-      <record>
-        city            ${city.names.en["host"]}
-        latitude        ${location.latitude["host"]}
-        longitude       ${location.longitude["host"]}
-        country         ${country.iso_code["host"]}
-        country_name    ${country.names.en["host"]}
-        postal_code     ${postal.code["host"]}
-        region_code     ${subdivisions.0.iso_code["host"]}
-        region_name     ${subdivisions.0.names.en["host"]}
-      </record>
-
-       # To avoid get stacktrace error with `[null, null]` array for elasticsearch.
-       skip_adding_null_record  true
-</filter>
+# ikattey: Plugin needs to be installed first. We need to create our own Fluentd image for that
+# <filter Ingress>
+#     @type geoip
+#     geoip_lookup_keys  host
+#     backend_library geoip2_c
+#
+#     # Set adding field with placeholder (more than one settings are required.)
+#       <record>
+#         city            ${city.names.en["host"]}
+#         latitude        ${location.latitude["host"]}
+#         longitude       ${location.longitude["host"]}
+#         country         ${country.iso_code["host"]}
+#         country_name    ${country.names.en["host"]}
+#         postal_code     ${postal.code["host"]}
+#         region_code     ${subdivisions.0.iso_code["host"]}
+#         region_name     ${subdivisions.0.names.en["host"]}
+#       </record>
+#
+#        # To avoid get stacktrace error with `[null, null]` array for elasticsearch.
+#        skip_adding_null_record  true
+# </filter>
 
 <filter *>
     @type kubernetes_metadata
