EA-3130: WIP setup ingress logging

--- a/fluentd/base/conf/sources.conf
+++ b/fluentd/base/conf/sources.conf
@@ -20,7 +20,7 @@
     @type tail
     read_from_head true
     tag Ingress
-    path /var/log/containers/public-crc*.log
+    path /var/log/containers/*_kube-system_nginx-ingress*.log
     pos_file /var/log/containers/ingress.log.pos
     <parse>
         @type regexp
