--- a/fluentd/base/conf/sources.conf
+++ b/fluentd/base/conf/sources.conf
@@ -24,8 +24,8 @@
     pos_file /var/log/containers/ingress.log.pos
     <parse>
         @type regexp
-        # request_uri only matches requests starting with path /api/
-        expression ^(?<logtime>.+) (?<stream>stdout|stderr) (?<some-letter>.).+"client": "(?<client>(\d{1,3}\.){3}\d{1,3})", "host": "(?<host>.+?\..{2,12})", "scheme": "(?<scheme>https?)", "request_method": "(?<request_method>[A-Z]{3,6})", "request_uri": "(?<request_uri>\/api\/.+)", "request_id": "(?<request_id>[a-f0-9]+)", "status": (?<status>\d{3,3}), "upstream_addr": "(?<upstream_addr>(\d{1,3}\.){3}\d{1,3}(:\d{2,5})?)", "upstream_status": (?<upstream_status>\d{3,3}), "request_time": (?<request_time>\d+\.\d+), "upstream_response_time": (?<upstream_response_time>\d+\.\d+), "upstream_connect_time": (?<upstream_connect_time>\d+\.\d+), "upstream_header_time": (?<upstream_header_time>\d+\.\d+)}
+        # host only matches requests containing "-api"
+        expression ^(?<logtime>.+) (?<stream>stdout|stderr).+"client": "(?<client-ipv4>(\d{1,3}\.){3}\d{1,3})", "host": "(?<host>\S*-api.*)", "scheme": "(?<scheme>https?)", "request_method": "(?<request_method>[A-Z]{3,6})", "request_uri": "(?<request_uri>.+)", "request_id": "(?<request_id>[a-f0-9]+)", "status": (?<status>\d{3,3}), "upstream_addr": "(?<upstream_addr>(\d{1,3}\.){3}\d{1,3}(:\d{2,5})?)", "upstream_status": (?<upstream_status>\d{3,3}), "request_time": (?<request_time>\d+\.\d+), "upstream_response_time": (?<upstream_response_time>\d+\.\d+), "upstream_connect_time": (?<upstream_connect_time>\d+\.\d+), "upstream_header_time": (?<upstream_header_time>\d+\.\d+)}
         time_key logtime
         time_format %Y-%m-%dT%H:%M:%S.%NZ
         types id:integer
