EA-3130: WIP setup ingress logging

--- a/fluentd/base/conf/outputs.conf
+++ b/fluentd/base/conf/outputs.conf
@@ -1,13 +1,20 @@
-# <match **>
-#     @type elasticsearch
-#     # format host1:port1,host2:port2,host3:port3
-#     hosts "#{ENV['EANA_ELASTICSEARCH_HOSTS']}"
-#     index_name "#{ENV['EANA_ELASTICSEARCH_INDEX'] || 'fluentd-k8s'}"
-#     type_name fluentd
-# </match>
-
-IK: For debugging only. Writes output to a file on fluentd daemonset pods
 <match **>
-    @type file
-    path /tmp/fluentd.log
+    @type elasticsearch
+    # format host1:port1,host2:port2,host3:port3
+    hosts "#{ENV['EANA_ELASTICSEARCH_HOSTS']}"
+    index_name "#{ENV['EANA_ELASTICSEARCH_INDEX'] || 'fluentd-k8s'}"
+    include_timestamp true
+
+    <buffer>
+      flush_thread_count "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_THREAD_COUNT'] || '5'}"
+      flush_interval "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_INTERVAL'] || '30s'}"
+      chunk_limit_size "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_CHUNK_LIMIT_SIZE'] || '2M'}"
+      queue_limit_length "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_QUEUE_LIMIT_LENGTH'] || '32'}"
+      retry_max_interval "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_RETRY_MAX_INTERVAL'] || '30'}"
+    </buffer>
 </match>
+
+# IK: For debugging only. Write all logging to console
+# <match **>
+#   @type stdout
+# </match>
