--- a/fluentd/base/conf/filters.conf
+++ b/fluentd/base/conf/filters.conf
@@ -1,33 +1,22 @@
-# ikattey: Plugin needs to be installed first. We need to create our own Fluentd image for that
-# <filter Ingress>
-#     @type geoip
-#     geoip_lookup_keys  host
-#     backend_library geoip2_c
-#
-#     # Set adding field with placeholder (more than one settings are required.)
-#       <record>
-#         city            ${city.names.en["host"]}
-#         latitude        ${location.latitude["host"]}
-#         longitude       ${location.longitude["host"]}
-#         country         ${country.iso_code["host"]}
-#         country_name    ${country.names.en["host"]}
-#         postal_code     ${postal.code["host"]}
-#         region_code     ${subdivisions.0.iso_code["host"]}
-#         region_name     ${subdivisions.0.names.en["host"]}
-#       </record>
-#
-#        # To avoid get stacktrace error with `[null, null]` array for elasticsearch.
-#        skip_adding_null_record  true
-# </filter>
+# Parsing is done here instead of at the source, so we can suppress errors when filtering
+# For some reason, the parser plugin only suppresses "pattern not matched" warning when in a <filter> block
+#  see: https://github.com/fluent/fluentd/issues/1617
+  <filter kubernetes.ingress.**>
+    @type parser
+    key_name message
+    suppress_parse_error_log true
+    emit_invalid_record_to_error false
+    <parse>
+        @type regexp
+        expression ^.+"time_date": "(?<time>.+)", "client": "(?<client-ipv4>(?:[0-9]{1,3}\.){3}[0-9]{1,3})", "host": "(?<host>search-api.*)", "scheme": "(?<scheme>https?)", "request_method": "(?<request_method>[A-Z]{3,7})", "request_uri": "(?<request_uri>.+)", "request_id": "(?<request_id>[a-f0-9]+)", "status": (?<status>\d+), "upstream_addr": "(?<upstream_addr>(\d{1,3}\.){3}\d{1,3}(:\d{2,5})?)", "upstream_status": (?<upstream_status>\d+), "request_time": (?<request_time>\d+\.\d+), "upstream_response_time": (?<upstream_response_time>\d+\.\d+), "upstream_connect_time": (?<upstream_connect_time>\d+\.\d+), "upstream_header_time": (?<upstream_header_time>\d+\.\d+)}
+        time_key time
+        time_format %Y-%m-%dT%H:%M:%S%:z
+        types status:integer,upstream_status:integer
+      </parse>
+  </filter>
 
-<filter *>
+# Include additional kubernetes metadata in log output
+ <filter kubernetes.**>
     @type kubernetes_metadata
     @id filter_kube_metadata
-    kubernetes_url "#{ENV['FLUENT_FILTER_KUBERNETES_URL'] || 'https://' + ENV.fetch('KUBERNETES_SERVICE_HOST') + ':' + ENV.fetch('KUBERNETES_SERVICE_PORT') + '/api'}"
-    verify_ssl "#{ENV['KUBERNETES_VERIFY_SSL'] || true}"
-    ca_file "#{ENV['KUBERNETES_CA_FILE']}"
-    skip_labels "#{ENV['FLUENT_KUBERNETES_METADATA_SKIP_LABELS'] || 'false'}"
-    skip_container_metadata "#{ENV['FLUENT_KUBERNETES_METADATA_SKIP_CONTAINER_METADATA'] || 'false'}"
-    skip_master_url "#{ENV['FLUENT_KUBERNETES_METADATA_SKIP_MASTER_URL'] || 'false'}"
-    skip_namespace_metadata "#{ENV['FLUENT_KUBERNETES_METADATA_SKIP_NAMESPACE_METADATA'] || 'false'}"
-</filter>
+ </filter>
