--- a/fluentd/base/conf/sources.conf
+++ b/fluentd/base/conf/sources.conf
@@ -1,11 +1,11 @@
 <source>
     @type tail
     read_from_head true
-    tag Api
+    tag kubernetes.eana.api.*
     # API apps are named "x-api-deployment"; eg search-api-deployment
     path /var/log/containers/*-api-deployment*.log
     exclude_path ["/var/log/containers/api-gateway*.log"]
-    pos_file /var/log/containers/api-deployments.log.pos
+    pos_file /var/log/api-deployments.log.pos
     <parse>
         @type json
         time_format %Y-%m-%dT%H:%M:%S.%NZ
@@ -19,15 +19,9 @@
 <source>
     @type tail
     read_from_head true
-    tag Ingress
+    tag kubernetes.ingress.*
+    # parsing is implemented in the filter for this tag
+    format none
     path /var/log/containers/*_kube-system_nginx-ingress*.log
-    pos_file /var/log/containers/ingress.log.pos
-    <parse>
-        @type regexp
-        # host only matches requests containing "-api"
-        expression ^(?<logtime>.+) (?<stream>stdout|stderr).+"client": "(?<client-ipv4>(\d{1,3}\.){3}\d{1,3})", "host": "(?<host>\S*-api.*)", "scheme": "(?<scheme>https?)", "request_method": "(?<request_method>[A-Z]{3,6})", "request_uri": "(?<request_uri>.+)", "request_id": "(?<request_id>[a-f0-9]+)", "status": (?<status>\d{3,3}), "upstream_addr": "(?<upstream_addr>(\d{1,3}\.){3}\d{1,3}(:\d{2,5})?)", "upstream_status": (?<upstream_status>\d{3,3}), "request_time": (?<request_time>\d+\.\d+), "upstream_response_time": (?<upstream_response_time>\d+\.\d+), "upstream_connect_time": (?<upstream_connect_time>\d+\.\d+), "upstream_header_time": (?<upstream_header_time>\d+\.\d+)}
-        time_key logtime
-        time_format %Y-%m-%dT%H:%M:%S.%NZ
-        types id:integer
-    </parse>
+    pos_file /var/log/ingress.log.pos
 </source>
