EA-3130: Improve fluentd config

--- a/fluentd/base/conf/outputs.conf
+++ b/fluentd/base/conf/outputs.conf
@@ -1,4 +1,5 @@
-<match **>
+# Send kubernetes events to Elasticsearch (comment this block out for debugging)
+<match kubernetes.**>
     @type elasticsearch
     # format host1:port1,host2:port2,host3:port3
     hosts "#{ENV['EANA_ELASTICSEARCH_HOSTS']}"
@@ -14,7 +15,7 @@
     </buffer>
 </match>
 
-# IK: For debugging only. Write all logging to console
-# <match **>
-#   @type stdout
-# </match>
+# Log everything else to the console
+<match **>
+   @type stdout
+ </match>
