EA-3176: Handle multi-line logs from Spring Boot APIs

--- a/fluentd/base/conf/filters.conf
+++ b/fluentd/base/conf/filters.conf
@@ -16,8 +16,21 @@
       </parse>
   </filter>
 
-# Include additional kubernetes metadata in log output
- <filter kubernetes.**>
-    @type kubernetes_metadata
-    @id filter_kube_metadata
- </filter>
+  # Include additional kubernetes metadata in log output
+   <filter kubernetes.**>
+      @type kubernetes_metadata
+      @id filter_kube_metadata
+   </filter>
+
+ # Handle multi-line stacktraces
+  <filter kubernetes.eana.api.**>
+    @type concat
+    stream_identity_key docker.container_id
+    key log
+    # Spring Boot logs always start with a timestamp
+    multiline_start_regexp /\d{2}:\d{2}:\d{2}\.\d+/
+    flush_interval 5
+    #   Handle timeout log lines the same as normal logs.
+    timeout_label "@NORMAL"
+  </filter>
+
