--- a/fluentd/base/conf/outputs.conf
+++ b/fluentd/base/conf/outputs.conf
@@ -1,5 +1,13 @@
-# Send kubernetes events to Elasticsearch (comment this block out for debugging)
-<match kubernetes.**>
+# Handle all log lines as "NORMAL"
+<match kubernetes.eana.api.**>
+    @type relabel
+    @label @NORMAL
+</match>
+
+
+<label @NORMAL>
+  # Send kubernetes events to Elasticsearch (comment this block out for debugging)
+  <match kubernetes.**>
     @type elasticsearch
     # format host1:port1,host2:port2,host3:port3
     hosts "#{ENV['EANA_ELASTICSEARCH_HOSTS']}"
@@ -13,7 +21,8 @@
       queue_limit_length "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_QUEUE_LIMIT_LENGTH'] || '32'}"
       retry_max_interval "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_RETRY_MAX_INTERVAL'] || '30'}"
     </buffer>
-</match>
+  </match>
+</label>
 
 # Log everything else to the console
 <match **>
