EA-3176: Generalize fluentd setup

--- a/fluentd/base/conf/fluent.conf
+++ b/fluentd/base/conf/fluent.conf
@@ -1,3 +1,3 @@
-@include sources.conf
-@include filters.conf
-@include outputs.conf
+@include apps.conf
+@include ingress.conf
+@include output.conf
