--- a/fluentd/base/conf/output.conf
+++ b/fluentd/base/conf/output.conf
@@ -1,30 +1,27 @@
-# Handle all log lines as "NORMAL"
-<match kubernetes.eana.api.**>
-    @type relabel
-    @label @NORMAL
-</match>
-
-
-<label @NORMAL>
-  # Send kubernetes events to Elasticsearch (comment this block out for debugging)
-  <match kubernetes.**>
+<label @output>
+  # Send all with @output label to Elasticsearch
+  <match **>
     @type elasticsearch
     # format host1:port1,host2:port2,host3:port3
     hosts "#{ENV['EANA_ELASTICSEARCH_HOSTS']}"
-    index_name "#{ENV['EANA_ELASTICSEARCH_INDEX'] || 'fluentd-k8s'}"
+
+    # append value of "fluent_type" property to index name
+    # by default, this will either be "fluentd-k8s.app" or "fluentd-k8s.ingress"
+    index_name "#{ENV['EANA_ELASTICSEARCH_INDEX'] || 'fluentd-k8s'}.${fluentd_type}"
     include_timestamp true
 
-    <buffer>
+   <buffer fluentd_type>
       flush_thread_count "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_THREAD_COUNT'] || '5'}"
       flush_interval "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_INTERVAL'] || '30s'}"
       chunk_limit_size "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_CHUNK_LIMIT_SIZE'] || '2M'}"
       queue_limit_length "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_QUEUE_LIMIT_LENGTH'] || '32'}"
       retry_max_interval "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_RETRY_MAX_INTERVAL'] || '30'}"
-    </buffer>
+  </buffer>
   </match>
 </label>
 
+
 # Log everything else to the console
 <match **>
-   @type stdout
- </match>
+  @type stdout
+</match>
