--- a/fluentd/base/kustomization.yaml
+++ b/fluentd/base/kustomization.yaml
@@ -7,6 +7,6 @@ configMapGenerator:
   - name: fluentd-config
     files:
       - ./conf/fluent.conf
-      - ./conf/sources.conf
-      - ./conf/filters.conf
-      - ./conf/outputs.conf
+      - ./conf/apps.conf
+      - ./conf/ingress.conf
+      - ./conf/output.conf
