--- a/fluentd/base/conf/apps.conf
+++ b/fluentd/base/conf/apps.conf
@@ -3,7 +3,7 @@
     @type tail
     @label @app
     tag kubernetes.app.*
-    path /var/log/containers/search-api*.log
+    path /var/log/containers/*.log
     # exclude all kube_system containers. This pattern also matches the NGINX Ingress. We'll handle that separately
     exclude_path ["/var/log/containers/*fluentd*.log","/var/log/containers/*ibm*.log","/var/log/containers/*rancher*.log","/var/log/containers/*_kube-system_*.log"]
     pos_file /var/log/kubernetes.app.log.pos
