EA-3176: Filter annotations retrieved by kubernetes_metadata plugin

--- a/fluentd/base/conf/apps.conf
+++ b/fluentd/base/conf/apps.conf
@@ -23,6 +23,9 @@
     # These are added to a "kubernetes" property within the log event
       <filter kubernetes.app.**>
         @type kubernetes_metadata
+        # Only include pod annotations starting with "fluentd/"
+        # ie. fluentd/include and fluentd/multiline
+        annotation_match ["^fluentd/*"]
         @id filter_kube_metadata
       </filter>
 
