--- a/fluentd/base/conf/apps.conf
+++ b/fluentd/base/conf/apps.conf
@@ -27,6 +27,8 @@
         # ie. fluentd/include and fluentd/multiline
         annotation_match ["^fluentd/*"]
         @id filter_kube_metadata
+        watch false
+        cache_ttl 300
       </filter>
 
       # Sets three properties on the log event:
