--- a/fluentd/base/conf/apps.conf
+++ b/fluentd/base/conf/apps.conf
@@ -27,6 +27,7 @@
         # ie. fluentd/include and fluentd/multiline
         annotation_match ["^fluentd/*"]
         @id filter_kube_metadata
+        # update Kubernetes metadata every 5 mins, instead of watching for changes
         watch false
         cache_ttl 300
       </filter>
