EA-3253: Update ingress logs regex
- query params and wskey now captured

--- a/fluentd/base/conf/ingress.conf
+++ b/fluentd/base/conf/ingress.conf
@@ -21,7 +21,7 @@
     <parse>
         @type regexp
         # for now only handle requests to Search & Record API
-        expression ^.+"time_date": "(?<time>.+)", "client": "(?<client-ipv4>(?:[0-9]{1,3}\.){3}[0-9]{1,3})", "host": "(?<host>search-api.*)", "scheme": "(?<scheme>https?)", "request_method": "(?<request_method>[A-Z]{3,7})", "request_uri": "(?<request_uri>.+)", "request_id": "(?<request_id>[a-f0-9]+)", "status": (?<status>\d+), "upstream_addr": "(?<upstream_addr>(\d{1,3}\.){3}\d{1,3}(:\d{2,5})?)", "upstream_status": (?<upstream_status>\d+), "request_time": (?<request_time>\d+\.\d+), "upstream_response_time": (?<upstream_response_time>\d+\.\d+), "upstream_connect_time": (?<upstream_connect_time>\d+\.\d+), "upstream_header_time": (?<upstream_header_time>\d+\.\d+)}
+        expression ^.+"time_date": "(?<time>.+)", "client": "(?<client-ipv4>(?:[0-9]{1,3}\.){3}[0-9]{1,3})", "host": "(?<host>search-api.*)", "scheme": "(?<scheme>https?)", "request_method": "(?<request_method>[A-Z]{3,7})", "request_uri": "(?<request_uri>.+)", "args": "(?<args>.*wskey=(?<wskey>.+).*)", "request_id": "(?<request_id>[a-f0-9]+)", "status": (?<status>\d+), "upstream_addr": "(?<upstream_addr>(\d{1,3}\.){3}\d{1,3}(:\d{2,5})?)", "upstream_status": (?<upstream_status>\d+), "request_time": (?<request_time>\d+\.\d+), "upstream_response_time": (?<upstream_response_time>\d+\.\d+), "upstream_connect_time": (?<upstream_connect_time>\d+\.\d+), "upstream_header_time": (?<upstream_header_time>\d+\.\d+)}
         time_key time
         time_format %Y-%m-%dT%H:%M:%S%:z
         types status:integer,upstream_status:integer
