--- a/fluentd/base/conf/output.conf
+++ b/fluentd/base/conf/output.conf
@@ -7,7 +7,7 @@
 
     # append value of "fluent_type" property to index name
     # by default, this will either be "fluentd-k8s.app" or "fluentd-k8s.ingress"
-    index_name "#{ENV['EANA_ELASTICSEARCH_INDEX'] || 'fluentd-k8s'}.${fluentd_type}.%Y-%m-%d"
+    index_name "#{ENV['EANA_ELASTICSEARCH_INDEX'] || 'fluentd-k8s'}.${fluentd_type}".%Y-%m-%d
     include_timestamp true
 
    <buffer fluentd_type>
