--- a/fluentd/base/conf/output.conf
+++ b/fluentd/base/conf/output.conf
@@ -7,10 +7,10 @@
 
     # append value of "fluent_type" property to index name
     # by default, this will either be "fluentd-k8s.app" or "fluentd-k8s.ingress"
-    index_name fluentd-k8s.${fluentd_type}.%Y%m%d
+    index_name "#{ENV['EANA_ELASTICSEARCH_INDEX'] || 'fluentd-k8s'}.${fluentd_type}.%Y-%m-%d"
     include_timestamp true
 
-   <buffer fluentd_type>
+   <buffer fluentd_type, time>
       flush_thread_count "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_THREAD_COUNT'] || '5'}"
       flush_interval "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_INTERVAL'] || '30s'}"
       chunk_limit_size "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_CHUNK_LIMIT_SIZE'] || '2M'}"
