--- a/fluentd/base/conf/output.conf
+++ b/fluentd/base/conf/output.conf
@@ -11,6 +11,7 @@
     include_timestamp true
 
    <buffer fluentd_type, time>
+      timekey 300
       flush_thread_count "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_THREAD_COUNT'] || '5'}"
       flush_interval "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_INTERVAL'] || '30s'}"
       chunk_limit_size "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_CHUNK_LIMIT_SIZE'] || '2M'}"
