--- a/fluentd/base/conf/ingress.conf
+++ b/fluentd/base/conf/ingress.conf
@@ -5,7 +5,7 @@
     @label @ingress
     # parsing is implemented in the filter for this tag
     format none
-    path /var/log/containers/*ingress*.log
+    path /var/log/containers/*kube-system_nginx-ingress*.log
     pos_file /var/log/ingress.log.pos
 </source>
 
