--- a/fluentd/base/conf/ingress.conf
+++ b/fluentd/base/conf/ingress.conf
@@ -21,7 +21,7 @@
     <parse>
         @type regexp
         # for now only handle requests to Search & Record API
-        expression /^.*"time_date": "(?<time_date>[^ ]*)", "client": "(?<client-ipv4>[^ ]*)", "host": "(?<host>search-api.*)", "scheme": "(?<scheme>https?)", "request_method": "(?<request_method>[^ ]*)", "request_uri": "(?<request_uri>[^ ]*)",\s+"args": "(?<args>[^ ]*)", "request_id": "(?<request_id>[^ ]*)", "status": (?<status>[^ ]*), "upstream_addr": "(?<upstream_addr>[^ ]*)", "upstream_status": (?<upstream_status>[^ ]*), "request_time": (?<request_time>[^ ]*), "upstream_response_time": (?<upstream_response_time>[^ ]*), "upstream_connect_time": (?<upstream_connect_time>[^ ]*), "upstream_header_time": (?<upstream_header_time>[^ ]*)}/
+        expression /^.*"time_date": "(?<time>[^ ]*)", "client": "(?<client-ipv4>[^ ]*)", "host": "(?<host>search-api.*)", "scheme": "(?<scheme>https?)", "request_method": "(?<request_method>[^ ]*)", "request_uri": "(?<request_uri>[^ ]*)",\s+"args": "(?<args>[^ ]*)", "request_id": "(?<request_id>[^ ]*)", "status": (?<status>[^ ]*), "upstream_addr": "(?<upstream_addr>[^ ]*)", "upstream_status": (?<upstream_status>[^ ]*), "request_time": (?<request_time>[^ ]*), "upstream_response_time": (?<upstream_response_time>[^ ]*), "upstream_connect_time": (?<upstream_connect_time>[^ ]*), "upstream_header_time": (?<upstream_header_time>[^ ]*)}/
         time_key time
         time_format %Y-%m-%dT%H:%M:%S%:z
         types status:integer,upstream_status:integer
