EA-3253: Append current date to ElasticSearch index

--- a/fluentd/base/conf/output.conf
+++ b/fluentd/base/conf/output.conf
@@ -7,15 +7,11 @@
 
     # append value of "fluent_type" property to index name
     # by default, this will either be "fluentd-k8s.app" or "fluentd-k8s.ingress"
-    index_name "#{ENV['EANA_ELASTICSEARCH_INDEX'] || 'fluentd-k8s'}.${fluentd_type}"
+    index_name "#{ENV['EANA_ELASTICSEARCH_INDEX'] || 'fluentd-k8s'}.${fluentd_type}.%Y-%m-%d"
     include_timestamp true
 
-   <buffer fluentd_type>
-      flush_thread_count "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_THREAD_COUNT'] || '5'}"
-      flush_interval "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_INTERVAL'] || '30s'}"
-      chunk_limit_size "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_CHUNK_LIMIT_SIZE'] || '2M'}"
-      queue_limit_length "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_QUEUE_LIMIT_LENGTH'] || '32'}"
-      retry_max_interval "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_RETRY_MAX_INTERVAL'] || '30'}"
+   <buffer fluentd_type, time>
+      timekey 300
   </buffer>
   </match>
 </label>
