EA-3253: Fix issues with log pushing to ES

--- a/fluentd/base/conf/output.conf
+++ b/fluentd/base/conf/output.conf
@@ -1,4 +1,5 @@
 <label @output>
+
   # Send all with @output label to Elasticsearch
   <match **>
     @type elasticsearch
@@ -11,13 +12,21 @@
     include_timestamp true
 
    <buffer fluentd_type, time>
-      timekey 300
-  </buffer>
+         @type file
+         timekey 1m # chunk output per min
+         path /var/log/fluentd-buffers
+         flush_mode interval
+         flush_interval 1m
+         flush_thread_count 2
+         retry_forever
+         retry_max_interval 30
+   </buffer>
   </match>
 </label>
 
-
-# Log everything else to the console
-<match **>
-  @type stdout
-</match>
+<label @FLUENT_LOG>
+  # Log everything else to the console
+  <match **>
+    @type stdout
+  </match>
+</label>
