--- a/fluentd/base/conf/ingress.conf
+++ b/fluentd/base/conf/ingress.conf
@@ -5,7 +5,7 @@
     @label @ingress
     # parsing is implemented in the filter for this tag
     format none
-    path /var/log/containers/*ingress*.log
+    path /var/log/containers/*kube-system_nginx-ingress*.log
     pos_file /var/log/ingress.log.pos
 </source>
 
@@ -16,13 +16,13 @@
   <filter kubernetes.ingress.**>
     @type parser
     key_name message
-    suppress_parse_error_log true
     emit_invalid_record_to_error false
     <parse>
         @type regexp
-        # for now only handle requests to Search & Record API
-        expression ^.+"time_date": "(?<time>.+)", "client": "(?<client-ipv4>(?:[0-9]{1,3}\.){3}[0-9]{1,3})", "host": "(?<host>search-api.*)", "scheme": "(?<scheme>https?)", "request_method": "(?<request_method>[A-Z]{3,7})", "request_uri": "(?<request_uri>.+)", "request_id": "(?<request_id>[a-f0-9]+)", "status": (?<status>\d+), "upstream_addr": "(?<upstream_addr>(\d{1,3}\.){3}\d{1,3}(:\d{2,5})?)", "upstream_status": (?<upstream_status>\d+), "request_time": (?<request_time>\d+\.\d+), "upstream_response_time": (?<upstream_response_time>\d+\.\d+), "upstream_connect_time": (?<upstream_connect_time>\d+\.\d+), "upstream_header_time": (?<upstream_header_time>\d+\.\d+)}
+        expression /^.*"time_date": "(?<time>[^ ]*)", "client": "(?<client-ipv4>[^ ]*)", "host": "(?<host>[^ ]*)", "scheme": "(?<scheme>https?)", "request_method": "(?<request_method>[^ ]*)", "request_uri": "(?<request_uri>[^ ]*)",\s+"args": "(?<args>[^ ]*)", "request_id": "(?<request_id>[^ ]*)", "status": (?<status>[^ ]*), "upstream_addr": "(?<upstream_addr>[^ ]*)", "upstream_status": (?<upstream_status>[^ ]*), "request_time": (?<request_time>[^ ]*), "upstream_response_time": (?<upstream_response_time>[^ ]*), "upstream_connect_time": (?<upstream_connect_time>[^ ]*), "upstream_header_time": (?<upstream_header_time>[^ ]*)}/
         time_key time
+        # time field used by buffer when pushing logs to Elasticsearch
+        keep_time_key true
         time_format %Y-%m-%dT%H:%M:%S%:z
         types status:integer,upstream_status:integer
       </parse>
