EA-3253: Move files

--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -38,6 +38,24 @@
        </record>
    </filter>
 
+  <filter kubernetes.ingress.**>
+    @type geoip
+    geoip_lookup_keys client-ipv4
+    backend_library geoip2_c
+    # db path only valid in europeana/fluentd image
+    geoip2_database "/usr/share/geoip/GeoLite2-City.mmdb"
+    <record>
+      city_name       ${city.names.en["client-ipv4"]}
+      latitude        ${location.latitude["client-ipv4"]}
+      longitude       ${location.longitude["client-ipv4"]}
+      country_code    ${country.iso_code["client-ipv4"]}
+      country_name    ${country.names.en["client-ipv4"]}
+      postal_code     ${postal.code["client-ipv4"]}
+      region_code     ${subdivisions.0.iso_code["client-ipv4"]}
+      region_name     ${subdivisions.0.names.en["client-ipv4"]}
+      skip_adding_null_record  true
+    </record>
+  </filter>
     # relabel and emit to @output
     <match kubernetes.ingress.**>
       @type relabel
