--- a/fluentd/kustomize/base/fluentd.properties.yaml.template
+++ b/fluentd/kustomize/base/fluentd.properties.yaml.template
@@ -4,18 +4,15 @@ metadata:
   name: fluentd
   namespace: fluentd
   labels:
-    k8s-app: fluentd-logging
-    version: v1
+    app: fluentd
 spec:
   selector:
     matchLabels:
-      k8s-app: fluentd-logging
-      version: v1
+      app: fluentd
   template:
     metadata:
       labels:
-        k8s-app: fluentd-logging
-        version: v1
+        app: fluentd
     spec:
       serviceAccount: fluentd
       serviceAccountName: fluentd
@@ -24,7 +21,7 @@ spec:
         effect: NoSchedule
       containers:
       - name: fluentd
-        image: fluent/fluentd-kubernetes-daemonset:v1-debian-elasticsearch
+        image: europeana/fluentd:v1.0.0
         env:
          # Only supports one host: https://github.com/fluent/fluentd/issues/2957
          # We need to override the plugin to distribute logs across our ES cluster
@@ -39,11 +36,12 @@ spec:
               fieldRef:
                 fieldPath: spec.nodeName
         resources:
-          limits:
-            memory: 200Mi
           requests:
-            cpu: 100m
-            memory: 200Mi
+            cpu: 200m
+            memory: 256Mi
+          limits:
+            cpu: 500m
+            memory: 512Mi
         volumeMounts:
         - name: fluentd-config
           mountPath: /fluentd/etc
