EA-3285: Extract wskey from request args

--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -32,9 +32,14 @@
     <filter kubernetes.ingress.**>
        @type record_transformer
        @id ingress_record_transformer
+       enable_ruby
        <record>
          # Used to determine which ES index log is written to
          fluentd_type ingress
+         # extract wskey value if it exists
+         # TODO: this requires enable_ruby (which is expensive)
+         # see if we can extract wskey value in the parse regex
+         wskey ${record["args"][/.*wskey=([^&]*)/,1]}
        </record>
    </filter>
 
