EA-3253: Add 'europeana_env' field to Elasticsearch output

--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -36,6 +36,7 @@
        <record>
          # Used to determine which ES index log is written to
          fluentd_type ingress
+         europeana_cluster "#{ENV['EANA_K8S_CLUSTER']}"
          # extract wskey value if it exists
          # TODO: this requires enable_ruby (which is expensive)
          # see if we can extract wskey value in the parse regex
