EA-3253: Publish logs from production and test clusters to separate indices

--- a/fluentd/kustomize/base/conf/output.conf
+++ b/fluentd/kustomize/base/conf/output.conf
@@ -6,18 +6,19 @@
     # format host1:port1,host2:port2,host3:port3
     hosts "#{ENV['EANA_ELASTICSEARCH_HOSTS']}"
 
-    # append value of "fluent_type" property to index name
-    # by default, this will either be "fluentd-k8s.app" or "fluentd-k8s.ingress"
-    index_name "#{ENV['EANA_ELASTICSEARCH_INDEX'] || 'fluentd-k8s'}.${fluentd_type}.%Y-%m-%d"
+    # append values of "fluent_type" and europeana_cluster properties to index name
+    # by default, fluent_type is either "app" or "ingress"
+    # europeana_cluster is either test or production
+    index_name "#{ENV['EANA_ELASTICSEARCH_INDEX'] || 'fluentd-k8s'}.${fluentd_type}.${europeana_cluster}.%Y-%m-%d"
     include_timestamp true
 
-   <buffer fluentd_type, time>
+   <buffer europeana_cluster, fluentd_type, time>
          @type file
          timekey 1m # chunk output per min
          path /var/log/fluentd-buffers
          flush_mode interval
          flush_interval 1m
-         flush_thread_count 2
+         flush_thread_count 5
          retry_forever
          retry_max_interval 30
    </buffer>
