--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -24,7 +24,7 @@
         # time field used by buffer when pushing logs to Elasticsearch
         keep_time_key true
         time_format %Y-%m-%dT%H:%M:%S%:z
-        types status:integer,upstream_status:integer
+        types status:integer,upstream_status:integer,request_time:float,upstream_connect_time:float,upstream_header_time:float,upstream_response_time:float
       </parse>
     </filter>
 
