Remove index rollover when pushing logs to ES
- rollover managed from within Elasticsearch

--- a/fluentd/kustomize/base/conf/output.conf
+++ b/fluentd/kustomize/base/conf/output.conf
@@ -9,7 +9,7 @@
     # append values of "fluent_type" and europeana_cluster properties to index name
     # by default, fluent_type is either "app" or "ingress"
     # europeana_cluster is either test or production
-    index_name "#{ENV['EANA_ELASTICSEARCH_INDEX'] || 'fluentd-k8s'}.${fluentd_type}.${europeana_cluster}.%Y-%m-%d"
+    index_name "#{ENV['EANA_ELASTICSEARCH_INDEX'] || 'fluentd-k8s'}.${fluentd_type}.${europeana_cluster}"
     include_timestamp true
 
    <buffer europeana_cluster, fluentd_type, time>
