EA-3327: Set parse types for ingress log fields (#12)
- rollover for indexes now managed from Elasticsearch

--- a/fluentd/kustomize/base/conf/output.conf
+++ b/fluentd/kustomize/base/conf/output.conf
@@ -9,7 +9,8 @@
     # append values of "fluent_type" and europeana_cluster properties to index name
     # by default, fluent_type is either "app" or "ingress"
     # europeana_cluster is either test or production
-    index_name "#{ENV['EANA_ELASTICSEARCH_INDEX'] || 'fluentd-k8s'}.${fluentd_type}.${europeana_cluster}.%Y-%m-%d"
+    # Elasticsearch rollover requires index name to match the following pattern: '^.*-\d+$'
+    index_name "#{ENV['EANA_ELASTICSEARCH_INDEX'] || 'fluentd-k8s'}.${fluentd_type}.${europeana_cluster}-1"
     include_timestamp true
 
    <buffer europeana_cluster, fluentd_type, time>
