--- a/fluentd/kustomize/base/conf/output.conf
+++ b/fluentd/kustomize/base/conf/output.conf
@@ -8,9 +8,8 @@
 
     # append values of "fluent_type" and europeana_cluster properties to index name
     # by default, fluent_type is either "app" or "ingress"
-    # europeana_cluster is either test or production
-    # Elasticsearch rollover requires index name to match the following pattern: '^.*-\d+$'
-    index_name "#{ENV['EANA_ELASTICSEARCH_INDEX'] || 'fluentd-k8s'}.${fluentd_type}.${europeana_cluster}-1"
+    # europeana_cluster is either "test" or "production"
+    index_name "fluentd-k8s-${fluentd_type}-${europeana_cluster}"
     include_timestamp true
 
    <buffer europeana_cluster, fluentd_type, time>
