EA-3308: Improve app log parsing

--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -10,7 +10,7 @@
     read_from_head true
     <parse>
       @type regexp
-      expression /^(?<time>.+) (?<stream>stdout|stderr) [^ ]* (?<log>.*)$/
+      expression /(?<time>[^ ]*) (?<stream>stdout|stderr) [^ ]* (?<level>[^ ]*) (?<class>[^:]*):(?<code_line_number >[^ ]*) \[(?<thread>[^ ]*)\] - (?<message>.*)/
       time_format  %Y-%m-%dT%H:%M:%S.%NZ
       time_key time
       time_type string
