--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -9,13 +9,23 @@
     pos_file /var/log/kubernetes.app.log.pos
     read_from_head true
     <parse>
-      @type regexp
-      expression /(?<time>[^ ]*) (?<stream>stdout|stderr) \w [^ ]* (?<level>[^ ]*) (?<class>[^:]*):(?<code_line_number >[^ ]*) \[(?<thread>[^ ]*)\] - (?<message>.*)/
-      time_format  %Y-%m-%dT%H:%M:%S.%NZ
-      time_key time
-      time_type string
-      localtime false
-    </parse>
+
+      # plugin documentation: https://github.com/repeatedly/fluent-plugin-multi-format-parser#configuration
+      # matches from top to bottom, so more-specific patterns should always come first
+        @type multi_format
+        <pattern>
+          format regexp
+          expression  /(?<time>[^ ]*) (?<stream>stdout|stderr) \w [^ ]* (?<level>[^ ]*) (?<class>[^:]*):(?<code_line_number >[^ ]*) \[(?<thread>[^ ]*)\] - (?<message>.*)/
+        </pattern>
+        <pattern>
+          format regexp
+          expression /^(?<time>.+) (?<stream>stdout|stderr) [^ ]* (?<log>.*)$/
+        </pattern>
+        time_format  %Y-%m-%dT%H:%M:%S.%NZ
+        time_key time
+        time_type string
+        localtime false
+      </parse>
 </source>
 
 <label @app>
