--- a/fluentd/kustomize/base/fluentd.properties.yaml.template
+++ b/fluentd/kustomize/base/fluentd.properties.yaml.template
@@ -21,7 +21,7 @@ spec:
         effect: NoSchedule
       containers:
       - name: fluentd
-        image: europeana/fluentd:v1.0.0
+        image: europeana/fluentd:EA-3308_multi_patterns
         env:
          # Only supports one host: https://github.com/fluent/fluentd/issues/2957
          # We need to override the plugin to distribute logs across our ES cluster
