EA-3308: Run with non-root user

--- a/fluentd/Dockerfile
+++ b/fluentd/Dockerfile
@@ -17,3 +17,6 @@ RUN buildDeps="build-essential libgeoip-dev ruby-dev  libmaxminddb-dev wget" \
     && rm -rf /tmp/* /var/tmp/* /usr/lib/ruby/gems/*/cache/*.gem \
     && mkdir -p /usr/share/geoip \
     && wget -P /usr/share/geoip/ https://git.io/GeoLite2-City.mmdb
+
+# user created in base image
+USER fluent
