Add changes for Post publication (write to different index)

--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -9,14 +9,15 @@
     pos_file /var/log/kubernetes.app.log.pos
     read_from_head true
     <parse>
-
-      # plugin documentation: https://github.com/repeatedly/fluent-plugin-multi-format-parser#configuration
-      # matches from top to bottom, so more-specific patterns should always come first
+        # plugin documentation: https://github.com/repeatedly/fluent-plugin-multi-format-parser#configuration
+        # matches from top to bottom, so more-specific patterns should always come first
         @type multi_format
+        # Regular application format
         <pattern>
           format regexp
           expression  /(?<time>[^ ]*) (?<stream>stdout|stderr) \w [^ ]* (?<level>[^ ]*) (?<class>[^:]*):(?<code_line_number >[^ ]*) \[(?<thread>[^ ]*)\] - (?<message>.*)/
         </pattern>
+        # Fallback application log (e.g. for Tomcat logs that use different time specification)
         <pattern>
           format regexp
           expression /^(?<time>.+) (?<stream>stdout|stderr) [^ ]* (?<log>.*)$/
@@ -58,6 +59,15 @@
          </record>
        </filter>
 
+    # Write logs from translation apps to different index (for Post publication project)
+    <filter kubernetes.app.**translate**>
+        @type record_transformer
+        @id id_kubernetes_translation_index
+        enable_ruby true
+        <record>
+            fluentd_type translate
+        </record>
+    </filter>
 
      # Discard events without fluentd_include set to "true"
      <filter kubernetes.app.**>
