Allow both translate and translation in app name

--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -60,7 +60,7 @@
        </filter>
 
     # Write logs from translation apps to different index (for Post publication project)
-    <filter kubernetes.app.**translate**>
+    <filter kubernetes.app.**translat**>
         @type record_transformer
         @id id_kubernetes_translation_index
         enable_ruby true
