Add pattern for parsing translation events

--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -12,10 +12,17 @@
         # plugin documentation: https://github.com/repeatedly/fluent-plugin-multi-format-parser#configuration
         # matches from top to bottom, so more-specific patterns should always come first
         @type multi_format
+        # Pattern specifically for translation events (see also https://regex101.com/r/TITVe1/1)
+        <pattern>
+          format regexp
+          expression  /(?<time>[^ ]*) (?<stream>stdout|stderr) \w [^ ]* (?<level>[^ ]*) (?<class>[^:]*):(?<code_line_number>[^ ]*) \[(?<thread>[^ ]*)\] - (?:id:)(?<recordid>[^ ]*) ((?<success>[0-9]*) (?<discard>[0-9]*) (?<fail>[0-9]*) )?(?<message>.*)/
+        </pattern>
+        # Pattern specifically for logging succesful, discarded and failed translations
+                
         # Regular application format
         <pattern>
           format regexp
-          expression  /(?<time>[^ ]*) (?<stream>stdout|stderr) \w [^ ]* (?<level>[^ ]*) (?<class>[^:]*):(?<code_line_number >[^ ]*) \[(?<thread>[^ ]*)\] - (?<message>.*)/
+          expression  /(?<time>[^ ]*) (?<stream>stdout|stderr) \w [^ ]* (?<level>[^ ]*) (?<class>[^:]*):(?<code_line_number>[^ ]*) \[(?<thread>[^ ]*)\] - (?<message>.*)/
         </pattern>
         # Fallback application log (e.g. for Tomcat logs that use different time specification)
         <pattern>
