Add language as separate field

--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -15,7 +15,7 @@
         # Pattern specifically for translation events (see also https://regex101.com/r/TITVe1/1)
         <pattern>
           format regexp
-          expression  /(?<time>[^ ]*) (?<stream>stdout|stderr) \w [^ ]* (?<level>[^ ]*) (?<class>[^:]*):(?<code_line_number>[^ ]*) \[(?<thread>[^ ]*)\] - (?:id:)(?<recordid>[^ ]*) ((?<success>[0-9]*) (?<discard>[0-9]*) (?<fail>[0-9]*) )?(?<message>.*)/
+          expression  /(?<time>[^ ]*) (?<stream>stdout|stderr) \w [^ ]* (?<level>[^ ]*) (?<class>[^:]*):(?<code_line_number>[^ ]*) \[(?<thread>[^ ]*)\] - (?:id:)(?<recordid>[^ ]*) ((?<success>[0-9]*) (?<discard>[0-9]*) (?<fail>[0-9]*) (?<lang>[^ ]*) )?(?<message>.*)/
         </pattern>
         # Regular application format
         <pattern>
