Add language and fieldname as separate fields

--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -12,10 +12,15 @@
         # plugin documentation: https://github.com/repeatedly/fluent-plugin-multi-format-parser#configuration
         # matches from top to bottom, so more-specific patterns should always come first
         @type multi_format
-        # Pattern specifically for translation events (see also https://regex101.com/r/TITVe1/1)
+        # Pattern specifically for translation events (see also https://regex101.com/r/jBIo7v/2)
         <pattern>
           format regexp
-          expression  /(?<time>[^ ]*) (?<stream>stdout|stderr) \w [^ ]* (?<level>[^ ]*) (?<class>[^:]*):(?<code_line_number>[^ ]*) \[(?<thread>[^ ]*)\] - (?:id:)(?<recordid>[^ ]*) ((?<success>[0-9]*) (?<discard>[0-9]*) (?<fail>[0-9]*) (?<lang>[^ ]*) )?(?<message>.*)/
+          expression  /(?<time>[^ ]*) (?<stream>stdout|stderr) \w [^ ]* (?<level>[^ ]*) (?<class>[^:]*):(?<code_line_number>[^ ]*) \[(?<thread>[^ ]*)\] - (?:rid:)(?<recordid>[^ ]*) (?<success>[0-9]*) (?<discard>[0-9]*) (?<fail>[0-9]*) (?<field>.*) (?<lang>[^ ]*)/
+        </pattern>
+        # Pattern specifically for start and end translation events
+        <pattern>
+          format regexp
+          expression  /(?<time>[^ ]*) (?<stream>stdout|stderr) \w [^ ]* (?<level>[^ ]*) (?<class>[^:]*):(?<code_line_number>[^ ]*) \[(?<thread>[^ ]*)\] - (?:rid:)(?<recordid>[^ ]*) (?<message>.*)/
         </pattern>
         # Regular application format
         <pattern>
