Add logs from post-publication app

--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -70,7 +70,7 @@
     </filter>
 
     # Write logs from translation apps to different index (for Post publication project)
-    <filter kubernetes.app.**translat**>
+    <filter kubernetes.app.**(translat|post-publication)**>
         @type record_transformer
         @id id_kubernetes_translation_index
         enable_ruby true
