Separate between post-publication and translate apps

--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -70,7 +70,16 @@
     </filter>
 
     # Write logs from translation apps to different index (for Post publication project)
-    <filter kubernetes.app.**(translat|post-publication)**>
+    <filter kubernetes.app.**post-publication**>
+        @type record_transformer
+        @id id_kubernetes_translation_index
+        enable_ruby true
+        <record>
+            fluentd_type translate
+        </record>
+    </filter>
+    # Write logs from translation apps to different index (for Post publication project)
+    <filter kubernetes.app.**translat**>
         @type record_transformer
         @id id_kubernetes_translation_index
         enable_ruby true
