--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -76,6 +76,7 @@
         enable_ruby true
         <record>
             fluentd_type translate
+            europeana_cluster "#{ENV['EANA_TRANSLATE_CLUSTER']}"
         </record>
     </filter>
     # Write logs from translation apps to different index (for Post publication project)
@@ -85,6 +86,7 @@
         enable_ruby true
         <record>
             fluentd_type translate
+            europeana_cluster "#{ENV['EANA_TRANSLATE_CLUSTER']}"
         </record>
     </filter>
 
